--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 node_modules/
 rundgang-armgartstrasse.sublime-workspace
 rundgang armgartstraße.sublime-workspace
+index.sublime-workspace
+src/img/raumplan/map1.ai
+src/img/raumplan/map2.ai
+src/img/raumplan/map3.ai
+src/img/slider/
+dist/img/slider/
