--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.sass-cache/
+﻿.sass-cache/
 node_modules/
 rundgang-armgartstrasse.sublime-workspace
 rundgang armgartstraße.sublime-workspace
@@ -6,5 +6,5 @@ index.sublime-workspace
 src/img/raumplan/map1.ai
 src/img/raumplan/map2.ai
 src/img/raumplan/map3.ai
-src/img/slider/
-dist/img/slider/
+src/img/slider/rundgang*.jpg
+dist/img/slider/rundgang*.jpg
